1.0.4
1. Java 25 -> 17